clean up project

--- a/Project/monoCAM.csproj
+++ b/Project/monoCAM.csproj
@@ -59,6 +59,7 @@
       <DependentUpon>GLWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="src\Main.cs" />
+    <Compile Include="src\Renderer.cs" />
     <Compile Include="src\STL_io.cs" />
   </ItemGroup>
   <ItemGroup>
