initial checkin of DropCutter.cs
added to a separate directory /cam for cam algorithms

--- a/Project/monoCAM.csproj
+++ b/Project/monoCAM.csproj
@@ -50,6 +50,7 @@
     <Reference Include="Tao.Platform.Windows, Version=1.0.0.4, Culture=neutral, PublicKeyToken=701104b2da67a104, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="cam\DropCutter.cs" />
     <Compile Include="src\Debug.cs" />
     <Compile Include="src\Geo.cs" />
     <Compile Include="src\GLWindow.cs">
