--- a/trunk/Project/monoCAM.csproj
+++ b/trunk/Project/monoCAM.csproj
@@ -50,6 +50,7 @@
     <Reference Include="Tao.Platform.Windows, Version=1.0.0.4, Culture=neutral, PublicKeyToken=701104b2da67a104, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\cam\camtest.cs" />
     <Compile Include="src\cam\DropCutter.cs" />
     <Compile Include="src\Camera.cs" />
     <Compile Include="src\Debug.cs" />
